external-crates/move/crates/move-compiler/tests/move_2024/typing/macro_duck_typing_method_invalid.move
module a::m {
    public struct X() has copy, drop;
    macro fun call_foo<$T>($x: $T) {
        let x= $x;
        x.foo()
    }

    fun t() {
        call_foo!(X());
    }
}
